--- a/public/resume.html
+++ b/public/resume.html
@@ -19,7 +19,7 @@
             </div>
         </header>
 
-        <section>
+        <section class="programming-abilities">
             <h3>Programming Abilities</h3>
             <ul>
                 <li>Java / JavaScript</li>
@@ -33,7 +33,7 @@
             </ul>
         </section>
 
-        <section>
+        <section class="extra-curricular">
             <h3>Extra-Curricular</h3>
             <ul>
                 <li>Robotics Club - Team 865 (WARP7). Leader in strategy and CNC.</li>
@@ -43,7 +43,7 @@
             </ul>
         </section>
 
-        <section>
+        <section class="certifications">
             <h3>Certifications</h3>
             <ul>
                 <li>Standard First Aid</li>
@@ -54,7 +54,7 @@
             </ul>
         </section>
 
-        <section>
+        <section class="education">
             <h3>Education</h3>
             <p><strong>University of Ottawa</strong> - Honors BSc Engineering</p>
             <p>September 2021 – Present</p>
@@ -64,45 +64,57 @@
             </ul>
         </section>
 
-        <section>
+        <section class="work-experience">
             <h3>Work Experience</h3>
-            <p><strong>Health Canada</strong> - Ottawa, ON (Jan 2024 – May 2024)</p>
-            <ul>
-                <li>Developed a revised medical asset tracker and presented it live to coworkers. The tracker is used by all regional managers at Health Canada to look after important medical equipment.</li>
-                <li>Created a new template for standard operating procedures (SOPs), as well as a tracker for managing and searching SOPs. Every employee uses the new template when creating a SOP.</li>
-                <li>Worked with the Operations team: tasks included holding meetings with every region, creating important discussions, and taking notes for later review.</li>
-            </ul>
-            <p><strong>Morrison Hershfield Limited</strong> - Markham, ON (May 2023 – August 2023)</p>
-            <ul>
-                <li>Solely responsible for developing algorithms to update a 12-year-old excel database of past projects. Utilized excel code, power queries, and macro setups.</li>
-                <li>Worked in the commissioning department with a team of certified mechanical and electrical engineers.</li>
-                <li>Aided workers on live construction sites. Cooperated with both coworkers from Morrison Hershfield as well as clients and other contributing companies.</li>
-            </ul>
-            <p><strong>Harbourfront Summer Camp</strong> - Toronto, ON (June 2022 – August 2022)</p>
-            <ul>
-                <li>Directly responsible for youth aged 4-16 in groups of up to 8.</li>
-                <li>Had to maintain control during high pressure situations.</li>
-                <li>Enthusiastically organized and led activities that encouraged creativity and growth.</li>
-            </ul>
+            <div class="job">
+                <p><strong>Health Canada</strong> - Ottawa, ON (Jan 2024 – May 2024)</p>
+                <ul>
+                    <li>Developed a revised medical asset tracker and presented it live to coworkers. The tracker is used by all regional managers at Health Canada to look after important medical equipment.</li>
+                    <li>Created a new template for standard operating procedures (SOPs), as well as a tracker for managing and searching SOPs. Every employee uses the new template when creating a SOP.</li>
+                    <li>Worked with the Operations team: tasks included holding meetings with every region, creating important discussions, and taking notes for later review.</li>
+                </ul>
+            </div>
+            <div class="job">
+                <p><strong>Morrison Hershfield Limited</strong> - Markham, ON (May 2023 – August 2023)</p>
+                <ul>
+                    <li>Solely responsible for developing algorithms to update a 12-year-old excel database of past projects. Utilized excel code, power queries, and macro setups.</li>
+                    <li>Worked in the commissioning department with a team of certified mechanical and electrical engineers.</li>
+                    <li>Aided workers on live construction sites. Cooperated with both coworkers from Morrison Hershfield as well as clients and other contributing companies.</li>
+                </ul>
+            </div>
+            <div class="job">
+                <p><strong>Harbourfront Summer Camp</strong> - Toronto, ON (June 2022 – August 2022)</p>
+                <ul>
+                    <li>Directly responsible for youth aged 4-16 in groups of up to 8.</li>
+                    <li>Had to maintain control during high pressure situations.</li>
+                    <li>Enthusiastically organized and led activities that encouraged creativity and growth.</li>
+                </ul>
+            </div>
         </section>
 
-        <section>
+        <section class="projects">
             <h3>Projects</h3>
-            <p><strong>Hotel Database</strong> - Solo Project, 2023</p>
-            <ul>
-                <li>Designed a website simulating a hotel booking program where customers and employees can login and manage hotel bookings. Customers can search for hotels using specific search keys.</li>
-                <li>Utilizes JavaScript, SQL databases/queries, and UI design.</li>
-            </ul>
-            <p><strong>3D Object Scanner</strong> - Solo Project, 2023</p>
-            <ul>
-                <li>Developed a program that when given a large list of 3D points, detects objects by finding dominant planes and grouping point clusters together.</li>
-                <li>Written in Java using the RANSAC algorithm.</li>
-            </ul>
-            <p><strong>Student Course Booking Application</strong> - Group Project, 2022</p>
-            <ul>
-                <li>Created a local database that contains users and courses. Students can view and enroll in courses. Instructors can assign themselves to courses. Admins can create and edit courses or users.</li>
-                <li>Developed using Android Studio, SQL, GitHub, and Git Bash.</li>
-            </ul>
+            <div class="project">
+                <p><strong>Hotel Database</strong> - Solo Project, 2023</p>
+                <ul>
+                    <li>Designed a website simulating a hotel booking program where customers and employees can login and manage hotel bookings. Customers can search for hotels using specific search keys.</li>
+                    <li>Utilizes JavaScript, SQL databases/queries, and UI design.</li>
+                </ul>
+            </div>
+            <div class="project">
+                <p><strong>3D Object Scanner</strong> - Solo Project, 2023</p>
+                <ul>
+                    <li>Developed a program that when given a large list of 3D points, detects objects by finding dominant planes and grouping point clusters together.</li>
+                    <li>Written in Java using the RANSAC algorithm.</li>
+                </ul>
+            </div>
+            <div class="project">
+                <p><strong>Student Course Booking Application</strong> - Group Project, 2022</p>
+                <ul>
+                    <li>Created a local database that contains users and courses. Students can view and enroll in courses. Instructors can assign themselves to courses. Admins can create and edit courses or users.</li>
+                    <li>Developed using Android Studio, SQL, GitHub, and Git Bash.</li>
+                </ul>
+            </div>
         </section>
 
         <footer>
@@ -111,3 +123,4 @@
     </div>
 </body>
 </html>
+
